--- a/study02-menu/src/application/Sample.fxml
+++ b/study02-menu/src/application/Sample.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.effect.BoxBlur?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -49,7 +51,7 @@
       </MenuBar>
    </top>
    <center>
-      <VBox fx:id="vbox" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox fx:id="vbox" prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
@@ -66,6 +68,15 @@
                         <Bloom threshold="0.22" />
                      </effect>
                   </Circle>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="48.0" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../image.png" />
+                     </image>
+                  </ImageView>
                </children>
             </HBox>
          </children>
