--- a/study02-menu/src/application/Sample.fxml
+++ b/study02-menu/src/application/Sample.fxml
@@ -20,7 +20,7 @@
         <menus>
           <Menu text="_File">
             <items>
-                  <MenuItem mnemonicParsing="false" text="Open" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open" />
            		  <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <Menu mnemonicParsing="false" text="Recent">
